# create-cpp-project

./: CMakeLists.txt  LICENSE  README.MD  build.sh  start.sh
src/: CMakeLists.txt  Directory.cpp  Directory.h  Files.cpp  Files.h  main.cpp
