cmake_minimum_required(VERSION 3.16)
project(create-cpp-project)

add_subdirectory(src)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_BUILD_TYPE Debug)

install(TARGETS create-cpp-project
        DESTINATION /usr/bin)

set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Filip Ivanusec")

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "create-cpp-project")
set(CPACK_PACKAGE_VENDOR "Filip Ivanusec")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.MD")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_CONTACT "Filip Ivanusec")
include(CPack)